--- a/Lectures/04 Data Types/10 String Formatting.ipynb
+++ b/Lectures/04 Data Types/10 String Formatting.ipynb
@@ -158,6 +158,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nHelloalireza wish you enjoy the dishwasher\\n\\nbest regards,\\nAli\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Email_template ='''\n",
+    "Hello{name} wish you enjoy the {Product}\n",
+    "\n",
+    "best regards,\n",
+    "{salesman}\n",
+    "'''\n",
+    "\n",
+    "Email_template.format(name=\"alireza\" , Product = \"dishwasher\", salesman=\"Ali\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -275,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
