--- a/Lectures/04 Data Types/12 Composite Data Types.ipynb
+++ b/Lectures/04 Data Types/12 Composite Data Types.ipynb
@@ -61,7 +61,9 @@
    "metadata": {},
    "source": [
     "## 2. Tuples\n",
-    "Tuples are like lists, but they are immutable, which signifies they cannot be changed after creation. It's beneficial when we want a set of constants that belong together and should not be altered. Tuples are presented by rounded brackets `()`.\n"
+    "**Tuples are like lists, but they are immutable**\n",
+    "\n",
+    ", which signifies they cannot be changed after creation. It's beneficial when we want a set of constants that belong together and should not be altered. Tuples are presented by rounded brackets `()`.\n"
    ]
   },
   {
@@ -96,12 +98,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "Sets are an unordered collection of unique elements without duplicates. They are mutable, but they can only contain immutable Python objects as elements. You can perform operations like union, intersection, and difference on sets, similar to mathematical sets. Sets are represented with curly brackets `{}`.\n"
+    "Sets are an unordered collection of ``unique`` elements without duplicates. They are mutable, but they can only contain immutable Python objects as elements. You can perform operations like union, intersection, and difference on sets, similar to mathematical sets. Sets are represented with curly brackets `{}`.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -110,13 +112,13 @@
        "{1, 2, 4.0, 'Python'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{1, 2, \"Python\", 4.0}"
+    "{1, 2, \"Python\", 1,1 ,4.0}"
    ]
   },
   {
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +146,15 @@
        "{'name': 'Python', 'version': 3.9}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{\"name\": \"Python\", \"version\": 3.9}"
+    "{\"name\": \"Python\", \"version\": 3.9}\n",
+    "# instead of position we have key and value\n",
+    "# there is no order it dictionary"
    ]
   },
   {
@@ -180,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
