--- a/Lectures/04 Data Types/14 Accessing and Modifying List Elements.ipynb
+++ b/Lectures/04 Data Types/14 Accessing and Modifying List Elements.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['apple', 'blueberry', 'cherry', 'date', 'elderberry']"
+       "['apple', 'banana', 'cherry', 'date', 'elderberry']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,6 +301,8 @@
    "source": [
     "# Append 'elderberry' to the end of the list\n",
     "fruits.append('elderberry')\n",
+    "# WRONG = fruits = fruits.append(\"\")\n",
+    "#they are inplace\n",
     "fruits"
    ]
   },
@@ -624,7 +626,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -638,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
