--- a/Lectures/04 Data Types/18 Accessing and Modifying Dictionary.ipynb
+++ b/Lectures/04 Data Types/18 Accessing and Modifying Dictionary.ipynb
@@ -601,6 +601,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_person_info = {'name': 'Alice', \n",
+    "                   'age': 30,\n",
+    "                   'city': 'New York'}\n",
+    "\n",
+    "New_person_info ={'country': 'Iran', \n",
+    "                   'Number': 30,\n",
+    "                   'city': 'Karaj'}\n",
+    "\n",
+    "old_person_info= old_person_info.update(New_person_info)\n",
+    "old_person_info\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -957,7 +975,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -971,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
